syntax = "proto3";

package project.planton.provider.aws.awsiamrole.v1;

import "buf/validate/validate.proto";
import "google/protobuf/struct.proto";
import "project/planton/shared/options/options.proto";

// AwsIamRoleSpec defines the minimal fields needed to create an AWS IAM Role.
// It includes the trust policy JSON, managed policies, inline policies, and more.
message AwsIamRoleSpec {
  // description is an optional description of the IAM role.
  string description = 1;
  // path is the IAM path for the role. Defaults to "/" if omitted.
  string path = 2 [(project.planton.shared.options.recommended_default) = "/"];
  // trust_policy_json is the JSON string describing the trust relationship for the role.
  // Example: a trust policy allowing ECS tasks to assume this role.
  google.protobuf.Struct trust_policy = 3 [(buf.validate.field).required = true];
  // managed_policy_arns is a list of ARNs for AWS-managed or customer-managed IAM policies
  // you want to attach to this role.
  repeated string managed_policy_arns = 4 [(buf.validate.field).repeated = {unique: true}];
  // inline_policy_jsons is a map of inline policy names to a JSON policy doc.
  // Key is policy name. Value is the raw JSON for that policy.
  map<string, google.protobuf.Struct> inline_policies = 5;
}
