syntax = "proto3";

package project.planton.provider.aws.awsiamrole.v1;

// AwsIamRoleStackOutputs describes values returned by Pulumi/Terraform for an ECS service.
message AwsIamRoleStackOutputs {
  // role_arn is the ARN of the newly created role.
  string role_arn = 1;

  // role_name is the name of the IAM role in AWS.
  string role_name = 2;

  // instance_profile_arn is the ARN of the instance profile if one was created and attached to this role.
  string instance_profile_arn = 3;
}
